--- a/style.css
+++ b/style.css
@@ -269,6 +269,88 @@ h2 {
 	animation: bounce 1.5s infinite;
 }
 
+.line {
+	width: 100%;
+	height: 1px;
+	background-color: #e5e7eb;
+}
+
+.footer {
+	position: relative;
+	height: 3.5rem;
+	padding: 2rem;
+	bottom: 0;
+}
+
+.discript {
+	display: flex;
+	justify-content: center;
+	gap: 10px;
+	padding-top: 2rem;
+}
+
+.discript > span {
+	font-size: 1.5rem;
+	color: #9ca3af;
+	display: flex;
+	align-items: center;
+}
+
+.color-ex {
+	display: grid;
+	grid-template-columns: repeat(3, minmax(0, 1fr));
+	gap: 2rem;
+	margin-top: 1rem;
+}
+
+.ex-card {
+	box-shadow: 0 10px 40px -12px rgba(16, 24, 40, 0.1);
+	background-color: white;
+	border: 1px solid #d4d4d8;
+	border-radius: 1rem;
+	overflow: hidden;
+}
+
+.card-layout {
+	padding: 1rem;
+	top: 0;
+	position: sticky;
+}
+
+.card-layout-content {
+	display: flex;
+	align-items: center;
+	gap: 0.375rem;
+}
+
+.font-medium {
+	font-weight: 500;
+}
+
+.card-layout-2 {
+	padding: 1rem;
+	padding-top: 0;
+}
+
+.card-content {
+	display: flex;
+	flex-direction: column;
+	gap: 1rem;
+}
+
+.card-ex {
+	display: flex;
+	gap: 0.5rem;
+}
+
+.button-ex {
+	text-align: center;
+	padding: 0.5rem 1.5rem;
+	border-radius: 0.5rem;
+	cursor: pointer;
+	color: #fff;
+}
+
 @keyframes bounce {
 	0% {
 		top: 40px;
