--- a/style.css
+++ b/style.css
@@ -1,442 +1,515 @@
 body {
-	transition: background-color 0.5s ease;
-	padding: 0;
-	margin: 0;
-	color: #27272a;
-}
-
-ul {
-	display: flex;
-	list-style: none;
+  padding: 0;
+  margin: 0;
+  color: #27272a;
+  font-size: 18px;
 }
 
 a {
-	text-decoration: none;
-	color: #27272a;
+  text-decoration: none;
+  color: #27272a;
 }
 
-a.current-link {
-	font-weight: bold;
-	color: #007bff; /* 강조할 색상 */
-	text-decoration: underline;
+.ui-flex {
+  display: flex;
+  align-items: center;
 }
 
 header {
-	padding: 0 1.5rem;
-	border-bottom: 1px solid #e5e7eb;
-	display: flex;
-	height: 3.5rem;
-	align-items: center;
+  height: 3.5rem;
+}
+
+.head_fixed {
+  position: fixed;
+  display: flex;
+  border-bottom: 1px solid #e5e7eb;
+  width: 100%;
+  padding: 0 1.5rem;
+  background-color: #fff;
+  z-index: 99;
 }
 
 #logo {
-	display: flex;
-	align-items: center;
-	margin-right: 0.75rem;
+  margin-right: 0.75rem;
 }
 
 #logo_ui {
-	display: flex;
-	border-radius: 0.5rem;
-	font-size: 1.125rem;
-	font-weight: 600;
-	justify-content: center;
-	align-items: center;
-	width: 2rem;
-	height: 2rem;
-	background-color: black;
-	color: #fff;
-	margin-right: 0.5rem;
+  border-radius: 0.5rem;
+  font-size: 1.125rem;
+  font-weight: 600;
+  justify-content: center;
+  width: 2rem;
+  height: 2rem;
+  background-color: black;
+  color: #fff;
+  margin-right: 0.5rem;
 }
 
 #logo_colors {
-	display: none;
-	letter-spacing: 0;
-	font-weight: 500;
-	font-size: 1.25rem;
-	line-height: 1.75rem;
+  display: none;
+  letter-spacing: 0;
+  font-weight: 500;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
 }
 
 #ul_header {
-	display: flex;
-	align-items: center;
-	gap: 0.75rem;
+  gap: 0.75rem;
 }
 
 .ul_text {
-	display: flex;
-	align-items: center;
-	color: #71717a;
-	height: 3.5rem;
-	padding: 0 0.25rem;
+  color: #71717a;
+  height: 3.5rem;
+  padding: 0 0.25rem;
+}
+
+.main-container {
+  display: flex;
+  gap: 1rem;
+  padding: 1.5rem;
+  max-width: 1700px;
+  margin: 0 auto;
+  position: relative;
+  justify-content: space-between;
+  padding-top: 4rem;
+}
+
+.color-list {
+  width: 15%;
+  padding: 1rem;
+  background-color: #f9fafb;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.saved-grid {
+  width: 15%;
+  padding: 1rem;
+  background-color: #f9fafb;
+  border-radius: 0.5rem;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 50px);
+  grid-gap: 10px;
 }
 
 .section {
-	display: flex;
-	flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
 .section_content {
-	flex-grow: 1;
-	position: relative;
-	overflow-x: hidden;
+  flex-grow: 1;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .section_head {
-	padding: 0 1.5rem;
-	margin: 2rem auto 1.5rem auto;
-	max-width: 64rem;
+  padding: 0 1.5rem;
+  margin: 2rem auto 1.5rem auto;
+  max-width: 64rem;
 }
-.s_h_text_layout {
-	text-align: center;
+
+.saved-colors {
+  margin-top: 2rem;
+  margin-bottom: 3rem;
 }
-.s_h_text {
-	font-weight: 700;
-	font-size: 1.875rem;
-	line-height: 2.25rem;
-}
-.s_h_t_descript {
-	color: #52525b;
-	line-height: 1.5rem;
-	display: none;
-	margin-top: 1.5rem;
-}
-.s_h_t_descript_2 {
-	color: #52525b;
-	margin-top: 1rem;
+
+.palettes {
+  color: yellow;
+  font-size: 3rem;
+  text-align: center;
+  text-shadow: 0 0 5px yellow, 0 0 10px yellow;
+  animation: glow 1.5s linear infinite;
 }
 
 .search {
-	max-width: 28rem;
-	margin: 0 auto;
+  max-width: 28rem;
+  margin: 0 auto;
 }
 
 .searchBar {
-	box-shadow: rgb(0 0 0 / 8%) 0px 1px 2px, rgb(0 0 0 / 5%) 0px 4px 12px;
-	background-color: #fff;
-	border: 1px #d4d4d8 solid;
-	border-radius: 9999px;
-	overflow: hidden;
-	height: 3.5rem;
-	z-index: 40;
-	position: fixed;
-	right: 1rem;
-	left: 1rem;
-	bottom: 1.5rem;
+  box-shadow: rgb(0 0 0 / 8%) 0px 1px 2px, rgb(0 0 0 / 5%) 0px 4px 12px;
+  background-color: #fff;
+  border: 1px #d4d4d8 solid;
+  border-radius: 9999px;
+  overflow: hidden;
+  height: 3.5rem;
+  z-index: 40;
+  position: fixed;
+  right: 1rem;
+  left: 1rem;
+  bottom: 1.5rem;
 }
 
-.s_input_text {
-	font-weight: 500;
-	padding: 0 1.5rem;
-	padding-left: 3.5rem;
-	background-color: transparent;
-	border-radius: 9999px;
-	width: 100%;
-	height: 100%;
-	border: none;
+.input_text {
+  font-weight: 500;
+  padding: 0 1.5rem;
+  padding-left: 3.5rem;
+  background-color: transparent;
+  border-radius: 9999px;
+  width: 100%;
+  height: 100%;
+  border: none;
 }
-.s_input_text::-webkit-focus-inner {
-	border: 0;
-	outline: none;
-}
-
-.s_input_color {
-	appearance: none;
-	border: none;
-	border-radius: 9999px;
-	cursor: pointer;
-	width: 1.75rem;
-	height: 1.75rem;
-	top: 50%;
-	left: 1rem;
-	position: absolute;
-	transform: translateY(-50%);
+.input_text::-webkit-focus-inner {
+  border: 0;
+  outline: none;
 }
 
-.s_input_color::-webkit-color-swatch-wrapper {
-	padding: 0;
-	width: 100%;
-	height: 100%;
+.input_color {
+  appearance: none;
+  border: none;
+  border-radius: 9999px;
+  cursor: pointer;
+  width: 1.75rem;
+  height: 1.75rem;
+  top: 50%;
+  left: 1rem;
+  position: absolute;
+  transform: translateY(-50%);
 }
 
-.s_input_color::-webkit-color-swatch {
-	width: 100%;
-	height: 100%;
-	border: none;
-	border-radius: 9999px;
+.input_color::-webkit-color-swatch-wrapper {
+  padding: 0;
+  width: 100%;
+  height: 100%;
 }
 
-input[type="color" i] {
-	padding: 0;
+.input_color::-webkit-color-swatch {
+  width: 100%;
+  height: 100%;
+  border: none;
+  border-radius: 9999px;
+}
+
+input[type="color"] {
+  padding: 0;
 }
 
 .content {
-	padding: 0 1.5rem 3rem 1.5rem;
-	margin: 0 auto;
+  padding: 0 1.5rem 3rem 1.5rem;
+  margin: 0 auto;
 }
 
 .content_head {
-	align-items: center;
-	margin-bottom: 1rem;
+  align-items: center;
+  margin-bottom: 1rem;
 }
 
 .content_text {
-	font-size: 1.125rem;
-	line-height: 1.75rem;
-	text-align: center;
-	flex-grow: 1;
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+  text-align: center;
+  flex-grow: 1;
 }
 
 .content_box {
-	display: flex;
-	justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .content_box > button {
-	color: #52525b;
-	padding: 0.375rem 0.5rem;
-	border-radius: 0.375rem;
-	border: 0;
-	background-color: transparent;
-	cursor: pointer;
+  color: #52525b;
+  padding: 0.375rem 0.5rem;
+  border-radius: 0.375rem;
+  border: 0;
+  background-color: transparent;
+  cursor: pointer;
 }
 .color-cards {
-	display: flex;
-	gap: 1rem;
-	justify-content: space-between;
-	margin: 1.5rem 0;
+  display: flex;
+  gap: 1rem;
+  justify-content: space-between;
+  margin: 1.5rem 0;
 }
 
 .color-card {
-	width: 150px;
-	height: 100px;
-	border-radius: 0.5rem;
-	position: relative;
-	box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-	cursor: pointer;
+  width: 150px;
+  height: 100px;
+  border-radius: 0.5rem;
+  position: relative;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  cursor: pointer;
 }
 
 .color-info {
-	position: absolute;
-	bottom: 0.5rem;
-	left: 0.5rem;
-	color: #fff;
-	font-weight: bold;
+  position: absolute;
+  bottom: 0.5rem;
+  left: 0.5rem;
+  color: #fff;
+  font-weight: bold;
 }
 
 .color-value {
-	font-size: 0.75rem;
+  font-size: 0.75rem;
 }
 
 .color-name {
-	font-size: 0.75rem;
-}
-
-/* Saved Colors 스타일 */
-.saved-colors {
-	margin-top: 2rem;
-	margin-bottom: 3rem;
-}
-
-h2 {
-	color: yellow;
-	font-size: 3rem;
-	text-shadow: 0 0 5px yellow, 0 0 10px yellow;
-	animation: glow 1.5s linear infinite;
+  font-size: 0.75rem;
 }
 
 .saved-palette {
-	display: flex;
-	justify-content: center;
-	gap: 0.25rem;
+  display: flex;
+  justify-content: center;
+  gap: 0.25rem;
 }
 
 .palette-bg {
-	position: relative;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	width: 100px;
-	height: 100px;
-	margin-bottom: 50px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100px;
+  height: 100px;
+  margin-bottom: 50px;
 }
 
 .palette-color {
-	position: absolute;
+  position: absolute;
 
-	width: 40px;
-	height: 40px;
-	border-radius: 0.5rem;
-	animation: bounce 1.5s infinite;
+  width: 40px;
+  height: 40px;
+  border-radius: 0.5rem;
+  animation: bounce 1.8s linear infinite;
+  animation-fill-mode: both;
 }
 
 .line {
-	width: 100%;
-	height: 1px;
-	background-color: #e5e7eb;
+  width: 100%;
+  height: 1px;
+  background-color: #e5e7eb;
 }
 
 .footer {
-	position: relative;
-	height: 3.5rem;
-	padding: 2rem;
-	bottom: 0;
+  position: relative;
+  height: 4rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5rem;
+  bottom: 0;
 }
 
 .discript {
-	display: flex;
-	justify-content: center;
-	gap: 10px;
-	padding-top: 2rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
 
 .discript > span {
-	font-size: 1.5rem;
-	color: #9ca3af;
-	display: flex;
-	align-items: center;
+  font-size: 1.5rem;
+  color: #9ca3af;
+  display: flex;
+  align-items: center;
 }
 
 .color-ex {
-	display: grid;
-	grid-template-columns: repeat(3, minmax(0, 1fr));
-	gap: 2rem;
-	margin-top: 1rem;
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  gap: 2rem;
+  margin-top: 1.5rem;
 }
 
 .ex-card {
-	box-shadow: 0 10px 40px -12px rgba(16, 24, 40, 0.1);
-	background-color: white;
-	border: 1px solid #d4d4d8;
-	border-radius: 1rem;
-	overflow: hidden;
+  box-shadow: 0 10px 40px -12px rgba(16, 24, 40, 0.1);
+  background-color: white;
+  border: 1px solid #d4d4d8;
+  border-radius: 1rem;
+  overflow: hidden;
 }
 
 .card-layout {
-	padding: 1rem;
-	top: 0;
-	position: sticky;
+  padding: 1rem;
+  top: 0;
+  position: sticky;
 }
 
 .card-layout-content {
-	display: flex;
-	align-items: center;
-	gap: 0.375rem;
+  display: flex;
+  align-items: center;
+  gap: 0.375rem;
 }
 
 .font-medium {
-	font-weight: 500;
+  font-weight: 500;
 }
 
 .card-layout-2 {
-	padding: 1rem;
-	padding-top: 0;
+  padding: 1rem;
+  padding-top: 0;
 }
 
 .card-content {
-	display: flex;
-	flex-direction: column;
-	gap: 1rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .card-ex {
-	display: flex;
-	gap: 0.5rem;
+  display: flex;
+  gap: 0.5rem;
 }
 
 .button-ex {
-	text-align: center;
-	padding: 0.5rem 1.5rem;
-	border-radius: 0.5rem;
-	cursor: pointer;
-	color: #fff;
+  text-align: center;
+  padding: 0.5rem 1.5rem;
+  border-radius: 0.5rem;
+  cursor: pointer;
+  color: #fff;
+}
+
+/* 스켈레톤 기본 박스형 스타일 */
+.skeleton-box {
+  background-color: #f0f0f0;
+  border-radius: 0.5rem;
+  width: 100%;
+  height: 100px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+}
+
+/* 팔레트 스켈레톤 */
+.skeleton-palette {
+  background-color: #f0f0f0;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  position: relative;
+  overflow: hidden;
+}
+
+/* 스켈레톤 애니메이션 */
+.skeleton-box::before,
+.skeleton-palette::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: -150px;
+  width: 150px;
+  height: 100%;
+  background: linear-gradient(
+    90deg,
+    rgba(255, 255, 255, 0) 0%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0) 100%
+  );
+  animation: skeleton-loading 1.5s infinite;
+}
+
+.color-card,
+.ex-card {
+  box-shadow: rgb(0 0 0 / 8%) 0px 3px 6px, rgb(0 0 0 / 5%) 0px 4px 12px;
+  border-radius: 0.5rem;
+  position: relative;
+  overflow: hidden;
+}
+
+/* 복사 완료 메시지 스타일 */
+.copy-message {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.8);
+  color: white;
+  padding: 10px 20px;
+  border-radius: 8px;
+  font-size: 14px;
+  z-index: 1000;
+  opacity: 1;
+  transition: opacity 0.5s ease; /* 페이드 아웃 효과 */
+}
+
+/* 페이드 아웃 효과 */
+.copy-message.fade-out {
+  opacity: 0;
+}
+
+/* 애니메이션 키프레임 */
+@keyframes skeleton-loading {
+  0% {
+    left: -150px;
+  }
+  100% {
+    left: 100%;
+  }
 }
 
 @keyframes bounce {
-	0% {
-		top: 40px;
-		animation-timing-function: ease-in;
-	}
-	50% {
-		top: 120px;
-		height: 40px;
-		animation-timing-function: ease-out;
-	}
-	55% {
-		top: 150px;
-		height: 25px;
-		animation-timing-function: ease-in;
-	}
-	65% {
-		top: 120px;
-		height: 40px;
-		animation-timing-function: ease-out;
-	}
-	95% {
-		top: 40px;
-		animation-timing-function: ease-in;
-	}
-	100% {
-		top: 40px;
-		animation-timing-function: ease-in;
-	}
+  0% {
+    top: 40px;
+    animation-timing-function: ease-in;
+  }
+  50% {
+    top: 120px;
+    height: 40px;
+    animation-timing-function: ease-out;
+  }
+  55% {
+    top: 150px;
+    height: 25px;
+    animation-timing-function: ease-in;
+  }
+  65% {
+    top: 120px;
+    height: 40px;
+    animation-timing-function: ease-out;
+  }
+  95% {
+    top: 40px;
+    animation-timing-function: ease-in;
+  }
+  100% {
+    top: 40px;
+    animation-timing-function: ease-in;
+  }
 }
 
 @keyframes glow {
-	0% {
-		filter: hue-rotate(0deg);
-	}
-	100% {
-		filter: hue-rotate(360deg);
-	}
+  0% {
+    filter: hue-rotate(0deg);
+  }
+  100% {
+    filter: hue-rotate(360deg);
+  }
 }
 
 @media screen and (min-width: 768px) {
-	#logo {
-		margin-right: 1.5rem;
-	}
-	#logo_colors {
-		display: block;
-	}
-	.section {
-		flex-direction: row;
-	}
-	.section_head {
-		margin-top: 4rem;
-		margin-bottom: 1.5rem;
-	}
-	#section_head_layout {
-		margin-top: 3.5rem;
-		margin-bottom: 2rem;
-	}
-	.s_h_text_layout {
-		margin-bottom: 3rem;
-	}
-	.s_h_text {
-		font-size: 2.5rem;
-		line-height: 1;
-	}
-	.s_h_t_descript {
-		font-size: 1.125rem;
-		line-height: 1.75rem;
-		display: block;
-	}
-	.s_h_t_descript_2 {
-		font-size: 1.125rem;
-		line-height: 1.75rem;
-		display: none;
-	}
-	.searchBar {
-		inset: 0;
-		position: relative;
-	}
-	.content_head {
-		display: flex;
-	}
-	.content_text {
-		text-align: left;
-	}
-	.palette-color {
-		width: 40px;
-		height: 40px;
-	}
+  #logo {
+    margin-right: 1.5rem;
+  }
+  #logo_colors {
+    display: block;
+  }
+  .section {
+    flex-direction: row;
+  }
+  .section_head {
+    margin-top: 4rem;
+    margin-bottom: 1.5rem;
+  }
+  #section_head_layout {
+    margin-top: 3.5rem;
+    margin-bottom: 2rem;
+  }
+  .searchBar {
+    inset: 0;
+    position: relative;
+  }
+  .content_head {
+    display: flex;
+  }
+  .content_text {
+    text-align: left;
+  }
+  .palette-color {
+    width: 40px;
+    height: 40px;
+  }
 }
